--- a/src/views/Auth/index.scss
+++ b/src/views/Auth/index.scss
@@ -1,5 +1,27 @@
-@import "../../assets/scss/layout/display";
+@import "../../assets/scss/core";
 
 [view="auth"] {
-	@include display('flex', 'center', 'center')
+	header {
+		background-color: var(--primary);
+		height: rem(170);
+		@include display(flex, center, center);
+
+		h1 {
+			@include fluid-type(30px, 40px);
+			line-height: 1;
+			font-weight: 100;
+			margin-left: rem(-5);
+			color: var(--secondary);
+
+			small {
+				color: var(--secondary);
+				@include fluid-type(12px, 15px);
+				display: block;
+				font-weight: 900;
+				height: rem(10);
+				text-transform: uppercase;
+				margin-left: rem(3);
+			}
+		}
+	}
 }
