--- a/src/assets/scss/core/_settings.scss
+++ b/src/assets/scss/core/_settings.scss
@@ -1,58 +1,326 @@
-//
-// Author: André Carello <andrelino.cl@gmail.com>
-// Name: Vue Base
-// Description: Code for Vue projects
-// File: settings.scss
-// Location: scss/core
-//
-
-// -> global vars
-$browser-context: 16; // utilizada nas funcoes ( em, rem )
-$gutter: 15px;
-$columns: 12;
-
-// -> project colors
-$primary: #050517;
-$secondary:#D81E5B;
-$text-light: #FBFBFF;
+// define [ language ]
+$lang: 'en';
 
 
-// -> social media colors
-$linkedin-color: 	#8d6cab;
-$facebook-color: 	#1d3469;
-$google-color: 		#dd4b39;
-$youtube-color: 	#cd201f;
-$instagram-color: 	#e95950;
+// define [ locations ]
+$fonts_location:        '../fonts/';
+$images_location:       '../images/';
+$backgrounds_location:  '#{$images_location}backgrounds/';
 
-// -> project fonts
-$fonts: (
-  "Simplon Headline" simplonoi-headline 400,
-  "Simplon" simplonbp-light-webfont 300,
-  "Simplon" simplonbp-regular-webfont 400,
-  "Simplon" simplonbp-bold-webfont 600
-);
 
-// -> breakpoints
+// define [ suffix and preffix ]
+$prefix:    '';
+$suffix:    '';
+
+// define [ spaces ]
+$gutter: 20px;
+$margin: 20px;
+
+
+// define [ breapoints ]
 $breakpoints: (
-  "xs": 400px,
-  "sm": 576px,
-  "md": 768px,
-  "lg": 992px,
-  "xl": 1200px,
-  "xxl": 1600px
+        sm  :   576px,
+        md  :   768px,
+        lg  :   992px,
+        xl  :   1200px
 ) !default;
 
-// -> paths
-$font-path: "/assets/fonts/";
-$images-path: "/assets/images/";
-$backgrounds-path: "#{ $images-path }backgrounds/";
-$icons-path: "#{ $images-path }icons/";
+// define [ system colors ]
+$pure_yellow:    #FEC200;
+$orange:         #FE9713;
+$vivid_red:      #FF5A30;
+$light_magenta:  #FF3BFF;
+$green:          #2ED775;
+$blue:           #27C5D9;
+$grey:           #707070;
+$red:            #FE4848;
+
+$transparent:           transparent;
+$black:                 #000;
+$white:                 #fff;
+$gray-100:              #f7fafc;
+$gray-200:              #edf2f7;
+$gray-300:              #e2e8f0;
+$gray-400:              #cbd5e0;
+$gray-500:              #a0aec0;
+$gray-600:              #718096;
+$gray-700:              #4a5568;
+$gray-800:              #2d3748;
+$gray-900:              #1a202c;
+$red-100:               #fff5f5;
+$red-200:               #fed7d7;
+$red-300:               #feb2b2;
+$red-400:               #fc8181;
+$red-500:               #f56565;
+$red-600:               #e53e3e;
+$red-700:               #c53030;
+$red-800:               #9b2c2c;
+$red-900:               #742a2a;
+$orange-100:            #fffaf0;
+$orange-200:            #feebc8;
+$orange-300:            #fbd38d;
+$orange-400:            #f6ad55;
+$orange-500:            #ed8936;
+$orange-600:            #dd6b20;
+$orange-700:            #c05621;
+$orange-800:            #9c4221;
+$orange-900:            #7b341e;
+$yellow-100:            #fffff0;
+$yellow-200:            #fefcbf;
+$yellow-300:            #faf089;
+$yellow-400:            #f6e05e;
+$yellow-500:            #ecc94b;
+$yellow-600:            #d69e2e;
+$yellow-700:            #b7791f;
+$yellow-800:            #975a16;
+$yellow-900:            #744210;
+$green-100:             #f0fff4;
+$green-200:             #c6f6d5;
+$green-300:             #9ae6b4;
+$green-400:             #68d391;
+$green-500:             #48bb78;
+$green-600:             #38a169;
+$green-700:             #2f855a;
+$green-800:             #276749;
+$green-900:             #22543d;
+$teal-100:              #e6fffa;
+$teal-200:              #b2f5ea;
+$teal-300:              #81e6d9;
+$teal-400:              #4fd1c5;
+$teal-500:              #38b2ac;
+$teal-600:              #319795;
+$teal-700:              #2c7a7b;
+$teal-800:              #285e61;
+$teal-900:              #234e52;
+$blue-100:              #ebf8ff;
+$blue-200:              #bee3f8;
+$blue-300:              #90cdf4;
+$blue-400:              #63b3ed;
+$blue-500:              #4299e1;
+$blue-600:              #3182ce;
+$blue-700:              #2b6cb0;
+$blue-800:              #2c5282;
+$blue-900:              #2a4365;
+$indigo-100:            #ebf4ff;
+$indigo-200:            #c3dafe;
+$indigo-300:            #a3bffa;
+$indigo-400:            #7f9cf5;
+$indigo-500:            #667eea;
+$indigo-600:            #5a67d8;
+$indigo-700:            #4c51bf;
+$indigo-800:            #434190;
+$indigo-900:            #3c366b;
+$purple-100:            #faf5ff;
+$purple-200:            #e9d8fd;
+$purple-300:            #d6bcfa;
+$purple-400:            #b794f4;
+$purple-500:            #9f7aea;
+$purple:                #9866ef;
+$purple-600:            #805ad5;
+$purple-700:            #6b46c1;
+$purple-800:            #553c9a;
+$purple-900:            #44337a;
+$pink-100:              #fff5f7;
+$pink-200:              #fed7e2;
+$pink-300:              #fbb6ce;
+$pink-400:              #f687b3;
+$pink-500:              #ed64a6;
+$pink-600:              #d53f8c;
+$pink-700:              #b83280;
+$pink-800:              #97266d;
+$pink-900:              #702459;
 
 
-// -> root vars
-$root: (
-	'primary' $primary,
-	'secondary' $secondary,
-  'text-light' $text-light,
-  'rgb-light'  '255,255,255' 
+// define [ social media colors ]
+$linkedin-color: #8D6CAB;
+$facebook-color: #1D3469;
+$google-plus-color: #FF5D5D;
+$flickr-color: #FF0084;
+$instagram-color: #517FA4;
+$twitter-color: #55ACEE;
+$youtube-color: #B31217;
+
+// create [ colors array ]
+$colors: (
+        "transparent"	$transparent,
+        "black"	        $black,
+        "white"	        $white,
+        "gray-100"	$gray-100,
+        "gray-200"	$gray-200,
+        "gray-300"	$gray-300,
+        "gray-400"	$gray-400,
+        "gray-500"	$gray-500,
+        "gray-600"	$gray-600,
+        "gray-700"	$gray-700,
+        "gray-800"	$gray-800,
+        "gray-900"	$gray-900,
+        "red-100"	$red-100,
+        "red-200"	$red-200,
+        "red-300"	$red-300,
+        "red-400"	$red-400,
+        "red-500"	$red-500,
+        "red-600"	$red-600,
+        "red-700"	$red-700,
+        "red-800"	$red-800,
+        "red-900"	$red-900,
+        "orange-100"	$orange-100,
+        "orange-200"	$orange-200,
+        "orange-300"	$orange-300,
+        "orange-400"	$orange-400,
+        "orange-500"	$orange-500,
+        "orange-600"	$orange-600,
+        "orange-700"	$orange-700,
+        "orange-800"	$orange-800,
+        "orange-900"	$orange-900,
+        "yellow-100"	$yellow-100,
+        "yellow-200"	$yellow-200,
+        "yellow-300"	$yellow-300,
+        "yellow-400"	$yellow-400,
+        "yellow-500"	$yellow-500,
+        "yellow-600"	$yellow-600,
+        "yellow-700"	$yellow-700,
+        "yellow-800"	$yellow-800,
+        "yellow-900"	$yellow-900,
+        "green-100"	$green-100,
+        "green-200"	$green-200,
+        "green-300"	$green-300,
+        "green-400"	$green-400,
+        "green-500"	$green-500,
+        "green-600"	$green-600,
+        "green-700"	$green-700,
+        "green-800"	$green-800,
+        "green-900"	$green-900,
+        "teal-100"	$teal-100,
+        "teal-200"	$teal-200,
+        "teal-300"	$teal-300,
+        "teal-400"	$teal-400,
+        "teal-500"	$teal-500,
+        "teal-600"	$teal-600,
+        "teal-700"	$teal-700,
+        "teal-800"	$teal-800,
+        "teal-900"	$teal-900,
+        "blue-100"	$blue-100,
+        "blue-200"	$blue-200,
+        "blue-300"	$blue-300,
+        "blue-400"	$blue-400,
+        "blue-500"	$blue-500,
+        "blue-600"	$blue-600,
+        "blue-700"	$blue-700,
+        "blue-800"	$blue-800,
+        "blue-900"	$blue-900,
+        "indigo-100"	$indigo-100,
+        "indigo-200"	$indigo-200,
+        "indigo-300"	$indigo-300,
+        "indigo-400"	$indigo-400,
+        "indigo-500"	$indigo-500,
+        "indigo-600"	$indigo-600,
+        "indigo-700"	$indigo-700,
+        "indigo-800"	$indigo-800,
+        "indigo-900"	$indigo-900,
+        "purple-100"	$purple-100,
+        "purple-200"	$purple-200,
+        "purple-300"	$purple-300,
+        "purple-400"	$purple-400,
+        "purple-500"	$purple-500,
+        "purple"	$purple,
+        "purple-600"	$purple-600,
+        "purple-700"	$purple-700,
+        "purple-800"	$purple-800,
+        "purple-900"	$purple-900,
+        "pink-100"	$pink-100,
+        "pink-200"	$pink-200,
+        "pink-300"	$pink-300,
+        "pink-400"	$pink-400,
+        "pink-500"	$pink-500,
+        "pink-600"	$pink-600,
+        "pink-700"	$pink-700,
+        "pink-800"	$pink-800,
+        "pink-900"	$pink-900,
 );
+
+// define [ animations and timing ]
+$ease: ease;
+$timing: .25s;
+
+// define [ system fonts ]
+$create-fonts: false !default;
+$fonts: (
+        "San Francisco" SFProDisplay-Thin 100,
+        "San Francisco" SFProDisplay-Ultralight 200,
+        "San Francisco" SFProDisplay-Light 300,
+        "San Francisco" SFProDisplay-Regular 400,
+        "San Francisco" SFProDisplay-Medium 500,
+        "San Francisco" SFProDisplay-Semibold 600,
+        "San Francisco" SFProDisplay-Bold 700,
+        "San Francisco" SFProDisplay-Heavy 800,
+        "San Francisco" SFProDisplay-Black 900
+);
+
+// define grid options
+$create-grid-component: true !default;
+$grid_container_name:   'container';
+$grid_row_name:         'row';
+$grid_column_name:      'col';
+$grid_columns:          12;
+$grid_gutter:           $gutter;
+
+// define display options
+$create-display-helper: true !default;
+$display_name:           (block, flex, table, inline, inline-block, inline-flex);
+$display_justify-content: (flex-start fs, flex-end fe, center c);
+$display_align-items:     (flex-start fs, flex-end fe, center c, stretch s);
+
+
+// define margin options
+$create-margin-helper:  true !default;
+$margin_steps:          5;
+$margin_loop:           10;
+$margin_name:           'm';
+$margin_directions:     ('top', 'left', 'right', 'bottom');
+
+// define padding options
+$create-padding-helper: true !default;
+$padding_steps:         5;
+$padding_loop:          10;
+$padding_name:          'p';
+$padding_directions:    ('top', 'left', 'right', 'bottom');
+
+// define offset options
+$create-offset-helper:  true !default;
+$offset_name:           'offset';
+$offset_spaces:         12;
+
+// define badge options
+$create-badges:         false !default;
+$badge_gutter:          $gutter;
+
+
+// define backgrounds options
+// TODO fix colors array to create helpers
+$create-bgs-helpers:    true !default;
+$bgs_name:              'bg';
+$bgs_colors:            $colors;
+$bgs_step:              100;
+
+
+// define text colors options
+// TODO fix colors array to create helpers
+$create-text-color-helpers:    true !default;
+$text_name:              'text';
+$text_colors:            $colors;
+$text_step:              100;
+
+// define text alignment options
+$create-text-align-helpers:    true !default;
+$text_align_name:              'text';
+$text_align_options:            (center, left, right, justify);
+
+// define border colors options
+// TODO fix colors array to create helpers
+$create-border-helpers:  true !default;
+$border_name:          'border';
+$border_colors:          $colors;
+$border_step:            100;
+$border_width:           1;
+$border_step_width:      1;
+$border_loop:            10;
