--- a/src/assets/scss/core/_globals.scss
+++ b/src/assets/scss/core/_globals.scss
@@ -1,50 +1,42 @@
-//
-// Author: André Carello <andrelino.cl@gmail.com>
-// Name: Vue Base
-// Description: Code for Vue projects
-// File: globals.scss
-// Location: scss/core
-//
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,600&display=swap');
 
 :root {
-	@each $key, $value in $root {
-		--#{ $key }: #{ $value };
-	}
-	// --primary: #{$primary};
-	// --secondary: #{$secondary};
-	// --danger: #{$danger};
-	// --success: #{$success};
+  @each $name, $color in colors {
+    --#{$name}: $color
+  }
 }
 
-* {
-	-webkit-overflow-scrolling: touch !important;
-	padding: 0;
-	margin: 0;
-	outline: 0;
-	box-sizing: border-box;
+
+*{
+  padding: 0;
+  margin: 0;
+
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  -webkit-font-smoothing: antialiased;
+  outline: none!important;
+  text-decoration: none;
+
+  -webkit-overflow-scrolling: touch;
+
+  @include font('Roboto');
 }
+
 
 html,
-body {
-	margin: 0;
-	padding: 0;
-	@include font("Roboto");
-	position: relative;
-	height: 100%;
+body{
+  position: relative;
+  min-height: 100vh;
 }
 
-.hide {
-	display: none !important;
-}
+body{
+  max-width: 100vw;
+  width: 100%;
+  background-image: linear-gradient( -11deg, $light_magenta, $vivid_red, $pure_yellow );
 
-[view] {
-	background-color: var(--primary);
-	
-	min-height: 100vh;
-	max-width: 100vw;
-	width: 100%;
-	
-	overflow: hidden;
-	display: flex;
-	flex-flow: column;
+  a{
+    cursor: pointer;
+  }
 }
